--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <base href="hellokamerton/">
+  <base href="https://EvgeniyBorodin.github.io/hellokamerton/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="helokamerton/favicon.ico">
